test/classes/errors/newValueNotType.future
bug: compiler is permitting 'new' to be called on values rather than types

#12886
